--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,13 @@
 </ul>
 
 <form action="{{ url_for('adding') }}" method="POST">
-    <p>
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" />
-    </p>
-    <p>
-        <label for="message">Message</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-    </p>
-    <p><button type="submit">Submit</button></p>
+    <label for="title">Title</label>
+    <input type="text" id="title" name="title" />
+
+    <label for="message">Message</label>
+    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+    <button type="submit">Submit</button>
 </form>
 
 {% if entries %}
@@ -46,6 +44,18 @@
         {% endfor %}
     </tbody>
 </table>
+
+<nav>
+    {% if prev != None %}
+        <a href="{{ url_for('index', page=prev) }}">&lt;</a>
+    {% endif %}
+
+    <span>{{ page + 1 }}</span>
+
+    {% if next != None %}
+        <a href="{{ url_for('index', page=next) }}">&gt;</a>
+    {% endif %}
+</nav>
 
 {% else %}
 
