--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --accent: crimson;
+}
+
 html {
     font: 16px/1.6 sans-serif;
 }
@@ -17,6 +21,11 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    overflow: auto;
+}
+
+a {
+    color: var(--accent);
 }
 
 form {
@@ -42,5 +51,61 @@ table {
 }
 
 tr:nth-child(2n) {
-    background: #cacaca;
+    background: #ddd;
+}
+
+th,
+td {
+    padding: 0.5rem;
+}
+
+.flashes {
+    list-style: none;
+}
+
+.flashes li {
+    padding: 0.5rem;
+    margin: 0.5rem auto;
+    max-width: max-content;
+    background: pink;
+    animation: fadeout 3s ease forwards;
+}
+
+@keyframes fadeout {
+    80% {
+        opacity: 1;
+        margin-bottom: 0.5rem;
+    }
+    100% {
+        opacity: 0;
+        margin-bottom: -100%;
+    }
+}
+
+h1 {
+    font-size: 4rem;
+    font-weight: bold;
+    color: var(--accent);
+}
+
+h2 {
+    margin-top: 1em;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+nav span {
+    grid-column: 2 / 3;
+}
+
+nav a {
+    grid-column: 1 / 2;
+}
+
+nav span + a {
+    grid-column: 3 / 4;
 }
