--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
     {% endfor %}
 </ul>
 
-<form action="{{ url_for('adding') }}" method="POST">
+<form action="{{ url_for('add_entry') }}" method="POST">
     <label for="title">Title</label>
-    <input type="text" id="title" name="title" />
+    <input type="text" id="title" name="title" required />
 
     <label for="message">Message</label>
-    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+    <textarea name="message" id="message" cols="30" rows="10" required></textarea>
 
     <button type="submit">Submit</button>
 </form>
@@ -46,13 +46,13 @@
 </table>
 
 <nav>
-    {% if prev != None %}
+    {% if prev %}
         <a href="{{ url_for('index', page=prev) }}">&lt;</a>
     {% endif %}
 
-    <span>{{ page + 1 }}</span>
+    <span>{{ page }}</span>
 
-    {% if next != None %}
+    {% if next %}
         <a href="{{ url_for('index', page=next) }}">&gt;</a>
     {% endif %}
 </nav>
