--- a/templates/entry.html
+++ b/templates/entry.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<a href="{{ url_for('index') }}">Go back</a>
+
 <h2>{{ title }}</h2>
 <p><small>Viewed {{ view_count }} times</small></p>
 <p>{{ message }}</p>
