--- a/static/style.css
+++ b/static/style.css
@@ -109,3 +109,27 @@ nav a {
 nav span + a {
     grid-column: 3 / 4;
 }
+
+#modal {
+    position: absolute;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    height: 70%;
+    background: #fff;
+    box-shadow: 0 1rem 2rem #000;
+    border-radius: 0.5rem;
+    display: none;
+    padding: 3rem;
+}
+
+#modal.open {
+    z-index: 2;
+    display: block;
+}
+
+#modal button {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+}
