--- a/static/style.css
+++ b/static/style.css
@@ -18,10 +18,14 @@ body {
     min-height: 100vh;
     width: 50rem;
     margin: 0 auto 2rem;
+}
+
+#content {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     overflow: auto;
+
 }
 
 a {
@@ -109,3 +113,5 @@ nav a {
 nav span + a {
     grid-column: 3 / 4;
 }
+
+.hidden { display: none; }
